Fixing the alignment of the header image and paragraph

--- a/less/index.less
+++ b/less/index.less
@@ -70,10 +70,25 @@ html {
 
 /* HEADER */
 
+.header {
+	background-color: #E9ECEF;
+	display: flex;
+	border-radius: 5%;
+	margin-top: 1.5rem;
+
 	img {
 		max-width: 300px;
 		height: auto;
+		border-radius: 5%;
 	}
+
+	p {
+		margin-left: 1rem;
+	}
+
+}
+
+	
 
 
 .nav-bar {
@@ -85,6 +100,8 @@ html {
 		margin-top: 15px;
 		padding: 15px;
 		text-decoration: none;
+		color: black;
+		font-weight: bold;
 	}
 	
 	a:hover {
@@ -93,6 +110,8 @@ html {
 		border-radius: 10%;
 		text-align: center;
 	}
+	
+	
 
 }
 /* MAIN */
